# transformer

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  INIT.md  MODULE.bazel  README.md  WORKSPACE
examples/directory_app/: BUILD.bazel
examples/directory_app/job/data/: events.csv  users.csv
examples/directory_app/job/inputs/events/: config.json
examples/directory_app/job/inputs/users/: config.json
examples/directory_app/job/output/enriched_events/: part-00000.csv
examples/directory_app/job/output/spend_by_tier/: part-00000.csv
examples/directory_app/job/tables/enriched_events/: main.sql
examples/directory_app/job/tables/spend_by_tier/: main.sql
examples/directory_app/job/tables/spend_by_tier/validations/: no_null_tiers.sql
examples/gui_app/: BUILD.bazel
examples/jaffle_shop/: BUILD.bazel
examples/jaffle_shop/job/inputs/raw_customers/: config.json
examples/jaffle_shop/job/inputs/raw_items/: config.json
examples/jaffle_shop/job/inputs/raw_orders/: config.json
examples/jaffle_shop/job/inputs/raw_products/: config.json
examples/jaffle_shop/job/inputs/raw_stores/: config.json
examples/jaffle_shop/job/inputs/raw_supplies/: config.json
examples/jaffle_shop/job/tables/customer_orders_summary/: main.sql
examples/jaffle_shop/job/tables/customers/: main.sql
examples/jaffle_shop/job/tables/customers/validations/: customer_id_not_null.sql  customer_id_unique.sql  customer_type_accepted_values.sql  lifetime_amounts_balance.sql
examples/jaffle_shop/job/tables/locations/: main.sql
examples/jaffle_shop/job/tables/order_items/: main.sql
examples/jaffle_shop/job/tables/order_items/validations/: order_id_references_stg_orders.sql  order_item_id_not_null.sql  order_item_id_unique.sql
examples/jaffle_shop/job/tables/order_items_summary/: main.sql
examples/jaffle_shop/job/tables/order_supplies_summary/: main.sql
examples/jaffle_shop/job/tables/orders/: main.sql
examples/jaffle_shop/job/tables/orders/validations/: customer_id_references_stg_customers.sql  order_id_not_null.sql  order_id_unique.sql  order_total_balances.sql
examples/jaffle_shop/job/tables/products/: main.sql  output.json
examples/jaffle_shop/job/tables/stg_customers/: main.sql
examples/jaffle_shop/job/tables/stg_customers/validations/: customer_id_not_null.sql  customer_id_unique.sql
examples/jaffle_shop/job/tables/stg_locations/: main.sql
examples/jaffle_shop/job/tables/stg_locations/validations/: location_id_not_null.sql  location_id_unique.sql
examples/jaffle_shop/job/tables/stg_order_items/: main.sql
examples/jaffle_shop/job/tables/stg_order_items/validations/: order_id_not_null.sql  order_id_references_stg_orders.sql  order_item_id_not_null.sql  order_item_id_unique.sql
examples/jaffle_shop/job/tables/stg_orders/: main.sql
examples/jaffle_shop/job/tables/stg_orders/validations/: order_id_not_null.sql  order_id_unique.sql  order_total_balances.sql
examples/jaffle_shop/job/tables/stg_products/: main.sql
examples/jaffle_shop/job/tables/stg_products/validations/: product_id_not_null.sql  product_id_unique.sql
examples/jaffle_shop/job/tables/stg_supplies/: main.sql
examples/jaffle_shop/job/tables/stg_supplies/validations/: supply_uuid_not_null.sql  supply_uuid_unique.sql
examples/jaffle_shop/job/tables/supplies/: main.sql
examples/polymarket/: BUILD.bazel
examples/polymarket/job/inputs/raw_features/: config.json
examples/polymarket/job/inputs/raw_markets/: config.json
examples/polymarket/job/inputs/raw_orderbook/: config.json
examples/polymarket/job/inputs/raw_snapshots/: config.json
examples/polymarket/job/inputs/raw_trades/: config.json
examples/polymarket/job/tables/final_combined_report/: main.sql
examples/polymarket/job/tables/final_combined_report/validations/: category_not_null.sql  market_count_positive.sql  total_ticks_non_negative.sql
examples/polymarket/job/tables/int_features_market_summary/: main.sql
examples/polymarket/job/tables/int_features_market_summary/validations/: bar_count_positive.sql  market_id_not_null.sql  market_id_unique.sql  volatility_non_negative.sql
examples/polymarket/job/tables/int_markets_categorized/: main.sql
examples/polymarket/job/tables/int_markets_categorized/validations/: category_normalized_in_set.sql  condition_id_not_null.sql  condition_id_unique.sql
examples/polymarket/job/tables/int_orderbook_market_summary/: main.sql
examples/polymarket/job/tables/int_orderbook_market_summary/validations/: avg_spread_non_negative.sql  market_id_not_null.sql  market_id_unique.sql  tick_count_above_threshold.sql
examples/polymarket/job/tables/int_orderbook_side_breakdown/: main.sql
examples/polymarket/job/tables/int_orderbook_side_breakdown/validations/: market_id_not_null.sql  side_in_set.sql  tick_count_positive.sql
examples/polymarket/job/tables/int_snapshots_latency/: main.sql
examples/polymarket/job/tables/int_snapshots_latency/validations/: market_id_not_null.sql  market_id_unique.sql  snapshot_count_above_threshold.sql
examples/polymarket/job/tables/int_trade_market_summary/: main.sql
examples/polymarket/job/tables/int_trade_market_summary/validations/: condition_id_not_null.sql  condition_id_unique.sql  notional_non_negative.sql  trade_count_positive.sql
examples/polymarket/job/tables/mart_high_activity_markets/: main.sql
examples/polymarket/job/tables/mart_market_overview/: main.sql
examples/polymarket/job/tables/mart_orderbook_quality_check/: main.sql
examples/polymarket/job/tables/mart_quality_report/: main.sql
examples/polymarket/job/tables/mart_volatility_ranking/: main.sql
examples/polymarket/job/tables/stg_features/: main.sql
examples/polymarket/job/tables/stg_markets/: main.sql
examples/polymarket/job/tables/stg_orderbook/: main.sql
examples/polymarket/job/tables/stg_snapshots/: main.sql
examples/polymarket/job/tables/stg_trades/: main.sql  output.json
examples/polymarket/job/tables/stg_trades/validations/: size_positive.sql  (+3 more)
examples/scala_app/: BUILD.bazel
examples/scala_app/data/input/: events.csv
tools/parquet_peek/: BUILD.bazel  ParquetPeek.scala
(+166 files in other folders)
