load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "directory_example",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.example.directory.DirectoryJobExample",
    data = glob(["job/**"]),
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/job",
        "//src/main/scala/com/transformer/temporal",
    ],
)
