load("@rules_scala//scala:scala.bzl", "scala_binary")

# Launcher for the JavaFX GUI. Bundles parquet read+write so the GUI can preview
# parquet outputs and run jobs that use parquet inputs. Point the GUI at
# `examples/directory_app/job` after launch (or pass it as the first CLI arg) to
# try the sample job.
scala_binary(
    name = "gui_app",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.example.gui.GuiAppLauncher",
    deps = [
        # strict-deps: SqlEngine.init returns a type from core, so we need to
        # list core even though gui already depends on it transitively.
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/gui",
        "//src/main/scala/com/transformer/job",
        "//src/main/scala/com/transformer/read/parquet",
        "//src/main/scala/com/transformer/sql/exec",
        "//src/main/scala/com/transformer/write/parquet",
        "@maven//:org_openjfx_javafx_base",
        "@maven//:org_openjfx_javafx_base_mac_aarch64",
        "@maven//:org_openjfx_javafx_controls",
        "@maven//:org_openjfx_javafx_controls_mac_aarch64",
        "@maven//:org_openjfx_javafx_graphics",
        "@maven//:org_openjfx_javafx_graphics_mac_aarch64",
    ],
)
