load("@rules_scala//scala:scala.bzl", "scala_binary")

# Launcher for the JavaFX GUI. Point the GUI at `examples/directory_app/job`
# after launch (or pass it as the first CLI arg) to try the sample job.
scala_binary(
    name = "gui_app",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.example.gui.GuiAppLauncher",
    # JVM default heap (~25% of RAM, sometimes much less on macOS / inside
    # containers) is too small for any non-trivial parquet workload — a
    # 3.9GB compressed input streams through ~10+GB of decoded batches. The
    # GUI is opened against arbitrary workloads (jaffle_shop, polymarket,
    # whatever the user points at) so we can't pin a fixed -Xmx that's right
    # for all of them. MaxRAMPercentage lets the JVM scale to whatever box
    # the GUI runs on — 75% leaves headroom for the OS, IDE, browser, etc.
    # The wrapper script honors this; running `java -jar gui_app_deploy.jar`
    # bypasses it — pass `-XX:MaxRAMPercentage=75.0` (or a fixed `-Xmx`)
    # explicitly in that case.
    jvm_flags = ["-XX:MaxRAMPercentage=75.0"],
    deps = [
        # strict-deps: SqlEngine.init returns a type from core, so we list core
        # explicitly even though gui already depends on it transitively.
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/gui",
        "//src/main/scala/com/transformer/sql/exec",
        "@maven//:org_openjfx_javafx_base",
        "@maven//:org_openjfx_javafx_base_mac_aarch64",
        "@maven//:org_openjfx_javafx_controls",
        "@maven//:org_openjfx_javafx_controls_mac_aarch64",
        "@maven//:org_openjfx_javafx_graphics",
        "@maven//:org_openjfx_javafx_graphics_mac_aarch64",
    ],
)
