load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "jaffle_shop",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.example.jaffle.JaffleShopExample",
    data = glob(["job/**"]),
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/job",
        # Force the parquet read/write modules onto the classpath so the
        # ParquetSupport object installs its hooks at class-load time. The
        # example writes every table as parquet via per-table output.json.
        "//src/main/scala/com/transformer/read/parquet",
        "//src/main/scala/com/transformer/temporal",
        "//src/main/scala/com/transformer/write/parquet",
    ],
)
