load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "jaffle_shop",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.example.jaffle.JaffleShopExample",
    data = glob(["job/**"]),
    # JVM default heap is too small for realistic parquet workloads — see the
    # raw_test input case (3.9GB compressed → multi-GB decoded). The wrapper
    # script honors these; running `java -jar jaffle_shop_deploy.jar` bypasses
    # them — pass `-Xmx2g` (or larger) explicitly in that case.
    jvm_flags = ["-Xmx2g"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/job",
        # Force the parquet read/write modules onto the classpath so the
        # ParquetSupport object installs its hooks at class-load time. The
        # example writes every table as parquet via per-table output.json.
        "//src/main/scala/com/transformer/read/parquet",
        "//src/main/scala/com/transformer/temporal",
        "//src/main/scala/com/transformer/write/parquet",
    ],
)
