load("@rules_scala//scala:scala.bzl", "scala_binary")

scala_binary(
    name = "jaffle_shop",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.example.jaffle.JaffleShopExample",
    data = glob(["job/**"]),
    # JVM default heap is too small for realistic parquet workloads — see the
    # raw_test input case (3.9GB compressed → multi-GB decoded). The wrapper
    # script honors these; running `java -jar jaffle_shop_deploy.jar` bypasses
    # them — pass `-Xmx2g` (or larger) explicitly in that case.
    jvm_flags = ["-Xmx2g"],
    deps = [
        # strict-deps: job.run() returns a type from core, so we list core
        # explicitly even though job already depends on it transitively.
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/job",
        "//src/main/scala/com/transformer/temporal",
    ],
)
