load("@rules_scala//scala:scala.bzl", "scala_junit_test")

scala_junit_test(
    name = "sql_highlighter_test",
    srcs = ["SqlHighlighterTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/gui",
        "@maven//:junit_junit",
    ],
)

scala_junit_test(
    name = "dag_layout_test",
    srcs = ["DagLayoutTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/gui",
        "//src/main/scala/com/transformer/job",
        "//src/main/scala/com/transformer/temporal",
        "@maven//:junit_junit",
    ],
)

scala_junit_test(
    name = "result_persister_test",
    srcs = ["ResultPersisterTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/gui",
        "//src/main/scala/com/transformer/job",
        "@maven//:junit_junit",
    ],
)

scala_junit_test(
    name = "job_session_test",
    srcs = ["JobSessionTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/gui",
        "//src/main/scala/com/transformer/job",
        "@maven//:junit_junit",
    ],
)
