load("@rules_scala//scala:scala.bzl", "scala_junit_test")

scala_junit_test(
    name = "data_job_test",
    srcs = ["DataJobTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/job",
        "//src/main/scala/com/transformer/temporal",
        "@maven//:junit_junit",
    ],
)
