load("@rules_scala//scala:scala.bzl", "scala_library")

scala_library(
    name = "plan",
    srcs = glob(["**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/sql/parse",
        "@maven//:com_github_jsqlparser_jsqlparser",
    ],
)
