load("@rules_scala//scala:scala.bzl", "scala_junit_test")

scala_junit_test(
    name = "sql_engine_test",
    srcs = ["SqlEngineTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/read/csv",
        "//src/main/scala/com/transformer/sql/exec",
        "@maven//:junit_junit",
    ],
)

scala_junit_test(
    name = "sort_exec_test",
    srcs = ["SortExecTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/sql/exec",
        "//src/main/scala/com/transformer/sql/plan",
        "@maven//:junit_junit",
    ],
)

scala_junit_test(
    name = "join_swap_test",
    srcs = ["JoinSwapTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/sql/exec",
        "//src/main/scala/com/transformer/sql/plan",
        "@maven//:junit_junit",
    ],
)
