load("@rules_scala//scala:scala.bzl", "scala_junit_test")

scala_junit_test(
    name = "csv_writer_test",
    srcs = ["CsvWriterTest.scala"],
    suffixes = ["Test"],
    deps = [
        "//src/main/scala/com/transformer/core",
        "//src/main/scala/com/transformer/read/csv",
        "//src/main/scala/com/transformer/write/csv",
        "@maven//:junit_junit",
    ],
)
